run_spec(import.meta, ["php"], { requirePragma: true, endOfLine: "cr" });
run_spec(import.meta, ["php"], { requirePragma: true, endOfLine: "crlf" });
run_spec(import.meta, ["php"], { requirePragma: true, endOfLine: "lf" });
